# snapquestion

./: .env.example  .gitignore  .gitignore.backup  README.md  package-lock.json  package.json  setup.sh  test-api.sh  vercel.json
infra/docker/: docker-compose.yml
infra/sql/: init.sql
snap-question/: .env.example  package-lock.json  package.json
snap-question-backend/: .env.example  Dockerfile  main.py  main_simple.py  pyproject.toml  render.yaml  requirements.txt  test_api.py  test_openai.py  worker.py
snap-question/public/: index.html
src/: App.js  api.js  firebase.js
src/pages/: Playground.jsx  Upload.jsx
widget/: package-lock.json  package.json  vercel.json  webpack.config.js
widget/src/: demo.html  index.js  styles.css
